--- a/proyecto coder - copia/scss/syle.css
+++ b/proyecto coder - copia/scss/syle.css
@@ -3,6 +3,26 @@ body {
   background-color: bisque;
 }
 
+h2 {
+  font-size: 4rem;
+}
+
+h3 {
+  font-size: 6rem;
+}
+
+h4 {
+  font-size: 8rem;
+}
+
+h5 {
+  font-size: 10rem;
+}
+
+h6 {
+  font-size: 12rem;
+}
+
 * {
   margin: 0;
   padding: 0;
