--- a/proyecto coder - copia/css/syle.css
+++ b/proyecto coder - copia/css/syle.css
@@ -1,4 +1,8 @@
 /*variables*/
+body {
+  background-color: bisque;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -55,31 +59,6 @@ ul li ul li {
   display: block;
 }
 ul li ul li:hover ul {
-  display: block;
-}
-
-ul {
-  list-style: none;
-  font-size: 0;
-}
-
-li {
-  display: inline-block;
-  width: 25%;
-  position: relative;
-  font-size: 14px;
-}
-
-ul ul {
-  position: absolute;
-  display: none;
-}
-
-ul ul li {
-  display: block;
-}
-
-ul li:hover ul {
   display: block;
 }
 
