--- a/proyecto coder - copia/scss/syle.scss
+++ b/proyecto coder - copia/scss/syle.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
+//variables
+$color-principal:  #F7F7F7;
+$color-secundario: #fff;
+
 * {
     margin: 0;
     padding: 0;
@@ -8,21 +12,21 @@
 }
 
 .body {
-    background-color: #F7F7F7;
+    background-color:$color-principal;
     margin: auto;
 
 
 }
 
 .card {
-    margin: 5px;
+    margin: auto;
 }
 
 
 header,
 .main {
     width: 90%;
-    margin: 20px auto;
+    margin:  auto;
 
 }
 
@@ -48,7 +52,7 @@ header,
 }
 
 .formulario {
-    background: #fff;
+    background: $color-secundario;
     margin-top: 150px;
     padding: 3px;
 }
@@ -108,45 +112,36 @@ p {
 }
 
 
-
-
-
-
 .footer {
     grid-area: footer;
 }
 
 
 
-
 .pie-pagina {
     width: 100%;
-    background-color: #222831;
+    background-color: #222832;
 }
 
 .pie-pagina .grupo-1 {
     width: 100%;
-    max-width: 1200px;
     margin: auto;
     display: flex;
     justify-content: space-between;
     padding: 45px 0px;
 }
 
-.pie-pagina .grupo-1 .box figure {
+.pie-pagina .grupo-1 .box  {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.pie-pagina .grupo-1 .box figure img {
-    width: 250px;
+    
 }
 
 .pie-pagina .grupo-1 .box h2 {
-    color: #fff;
+    color:  $color-secundario;
     margin-bottom: 25px;
     font-size: 20px;
 }
@@ -162,7 +157,7 @@ p {
     width: 45px;
     height: 45px;
     line-height: 45px;
-    color: #fff;
+    color: $color-secundario;
     margin-right: 10px;
     background-color: #00ADB5;
     text-align: center;
@@ -177,7 +172,7 @@ p {
     background-color: #393E46;
     padding: 15px 10px;
     text-align: center;
-    color: #fff;
+    color:$color-secundario;
 }
 
 .pie-pagina .grupo-2 small {
@@ -203,27 +198,16 @@ p {
 }
 
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:900px) {
     .pie-pagina .grupo-1 {
         width: 90%;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-gap: 30px;
         padding: 35px 0px;
     }
 }
 
 
-@media (max-width:600px) {
-    .bodyGrid {
-        grid-template-areas:
-            "header header"
-            "main main"
-            "footer footer"
-        ;
-    }
-
-
-}
 
 @media(min-width:768px) {
     .formulario {
